<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edit"
        android:title="@string/menu_main_edit"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/day"
        android:title="@string/menu_main_day"
        android:icon="@android:drawable/ic_menu_day"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/month"
        android:title="@string/menu_main_month"
        android:icon="@android:drawable/ic_menu_month"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/year"
        android:title="@string/menu_main_year"
        android:icon="@android:drawable/ic_menu_my_calendar"
        app:showAsAction="ifRoom"/>
</menu>